--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <ul class="menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="#">Our Services</a></li>
+                <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
     </div>
@@ -47,15 +48,7 @@
             augue mauris augue neque gravida. Diam maecenas ultricies mi eget mauris 
             pharetra et ultrices neque. Quis viverra nibh cras pulvinar mattis nunc sed.
             Aliquet eget sit amet tellus cras adipiscing enim eu. Lacus suspendisse faucibus 
-            interdum posuere.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Aliquam nulla facilisi cras fermentum. Ullamcorper morbi tincidunt
-            ornare massa eget egestas purus viverra accumsan. Tellus orci ac auctor 
-            augue mauris augue neque gravida. Diam maecenas ultricies mi eget mauris 
-            pharetra et ultrices neque. Quis viverra nibh cras pulvinar mattis nunc sed.
-            Aliquet eget sit amet tellus cras adipiscing enim eu. Lacus suspendisse faucibus
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </p>
         </div>
     </section>
 
